--- a/dapplist.json
+++ b/dapplist.json
@@ -36,4 +36,12 @@
       "link": "https://www.omnibtc.finance/"
     }
   ]
+  "sui": [
+    {
+      "name": "OmniBTC",
+      "type": "DeFi/Aggregation",
+      "icon": "https://github.com/omniBTClabs/move-dapp-list/blob/main/assets/OmniBTC.png",
+      "link": "https://www.omnibtc.finance/"
+    }
+  ]
 }
