--- a/dapplist.json
+++ b/dapplist.json
@@ -26,7 +26,7 @@
     },
      {
       "name": "ChainX",
-      "type": "infrastructure",
+      "type": "Infrastructure",
       "icon": "https://pbs.twimg.com/profile_images/1351092066340757505/V4BjhfvY_400x400.jpg",
       "link": "https://chainx.org/"
     }
@@ -52,7 +52,7 @@
     },
      {
       "name": "ChainX",
-      "type": "infrastructure",
+      "type": "Infrastructure",
       "icon": "https://pbs.twimg.com/profile_images/1351092066340757505/V4BjhfvY_400x400.jpg",
       "link": "https://chainx.org/"
     }
