--- a/dapplist.json
+++ b/dapplist.json
@@ -66,3 +66,16 @@
     }
   ]
 }
+{
+  "aptos": [
+    //...
+    {
+      "name": "Topaz", 
+      "types": ["NFT"], // 项目类型：DEFI、DEX、NFT、Social、Tools、Wallet、Aggregator、Games
+      "icon": "https://pbs.twimg.com/profile_images/1567612585222045698/aI16v6aP_400x400.jpg",
+      "description": "发现艺术、文化和数字表达。建立在Aptos上的NFT市场。", 
+      "link": "https://www.topaz.so/", 
+      "twitter": "https://twitter.com/TopazMarket", 
+    }
+  ],
+
