--- a/dapplist.json
+++ b/dapplist.json
@@ -32,7 +32,7 @@
       "link": "https://www.omnibtc.finance/",
       "twitter": "https://twitter.com/OmniBTC",
       "medium": "https://medium.com/@omnibtc",
-      "telegram": "https://twitter.com/OmniBTC"
+      "telegram": "https://twitter.com/OmniBTC",
     }
   ]
 }
